
[workspace]
members = [
  "pg-event-server",
  "pg-event-listener",
  "pg-client-config",
]
resolver = "2"

[workspace.package]
authors = ["David Marteau <dmarteau@3liz.com>"]
repository = "https://github.com/3liz/pg-event-server"
homepage = "https://github.com/3liz/proj4rs/"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "2.0"
log = "0.4"
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
env_logger = "0.11"
tokio = "1"
futures = "0.3"

[patch.crates-io]
pg-event-listener = { path = "./pg-event-listener" }
pg-client-config = { path = "./pg-client-config" }
