[package]
name = "pg-client-config"
version = "0.1.0"
edition = "2021"
authors = ["David Marteau <dmarteau@3liz.com>"]
license = "MIT OR Apache-2.0"
description = "Support for Postgres service configuration files and environment variables"
homepage = "https://github.com/3liz/pg-event-server/"
keywords = [ "database", "sql", "postgres", "postgresql" ]
repository = "https://github.com/3liz/pg-event-server/"
documentation = "https://docs.rs/pg-client-config/"
readme = "./README.md"

[dependencies]
thiserror = "1.0"
rust-ini = "0.18"
tokio-postgres = "0.7"

[features]
default=["with-passfile"]
with-passfile = []
