[package]
name = "pg-client-config"
version = "0.1.2"
edition = "2021"
description = "Support for Postgres service configuration files and environment variables"
keywords = [ "database", "sql", "postgres", "postgresql" ]
documentation = "https://docs.rs/pg-client-config/"
readme = "./README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
thiserror = { workspace = true }
rust-ini = "0.21"
tokio-postgres = { workspace = true }

[features]
default=["with-passfile"]
with-passfile = []
