[package]
name = "pg-config"
version = "0.1.0"
edition = "2021"
authors = ["David Marteau <dmarteau@3liz.com>"]
description = "Parse Postgres service configuration files and more"
keywords = [ "database", "sql", "postgres", "postgresql" ]
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0"
rust-ini = "0.18"
tokio-postgres = "0.7"

[features]
default=["with-passfile"]
with-passfile = []
