[package]
name = "pg-event-listener"
version = "0.1.0"
edition = "2021"
description = "Tools for listening to Postgres events"
authors = ["David Marteau <dmarteau@3liz.com>"]
repository = "https://github.com/3liz/pg-event-server"
license = "MIT OR Apache-2.0"

[dependencies]
tokio-postgres = { version = "0.7" }
tokio-postgres-rustls = { version = "0.13" }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
futures = "0.3"
pg-client-config = { path = "../pg-client-config" }
log = "0.4"

[dev-dependencies]
clap = { version = "4", features=["derive"] }
env_logger = "0.11"

[[example]]
name = "pg-listen" 
