[package]
name = "pg-event-listener"
version = "0.1.0"
edition = "2021"
description = "Tools for listening to Postgres events"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
futures = { workspace = true }
pg-client-config = { version = "~0.1" }
log = { workspace = true }

[dev-dependencies]
clap = { version = "4", features=["derive"] }
env_logger = "0.11"

[[example]]
name = "pg-listen" 
