[package]
name = "pg-event-server"
version = "0.1.0"
edition = "2021"
description = "Postgres NOTIFY/SSE server"
authors = ["David Marteau <dmarteau@3liz.com>"]
repository = "https://github.com/3liz/pg-event-server"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
pg-event-listener = { path = "../pg-event-listener" }
pg-client-config = { path = "../pg-client-config" }
tokio-postgres = "0.7"
actix-web = { version = "4", features=["rustls"] }
actix-web-lab = "0.19"
tokio = "1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
thiserror = "1.0"
lazy_static = "1"
futures = "0.3"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
glob = "0.3"
num_cpus = "1"
tokio-postgres-rustls = { version = "0.9" }
rustls = { version = "0.20" }
rustls-pemfile = { version = "1" }
rustls-native-certs = { version = "0.6" }

[features]

# see https://crates.io/crates/cargo-deb
[package.metadata.deb]
maintainer = "David Marteau <dmarteau@3liz.com>"
copyright = "2023, 3liz"
license-file = "../LICENSE-APACHE"
extended-description = """\
Proxy Postgres event as HTTP Server Send Event.
A server that subscribes to Postgres notification
and serve them to HTTP clients as Server Send Event 
(SSE). """ 
depends = "$auto"
section = "utility"
priority = "optional"
assets = [ 
    ["target/release/pg-event-server", "usr/local/bin/", "755"],
]

