[package]
name = "pg-event-server"
version = "0.1.0"
edition = "2021"
description = "Postgres NOTIFY/SSE server"
readme = "../README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
pg-event-listener = { version = "~0.1" }
pg-client-config = { version = "~0.1" }
tokio-postgres = { workspace = true }
actix-web = { version = "4", features=["rustls-0_23"] }
actix-web-lab = "0.24"
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = { workspace = true }
lazy_static = "1"
futures = { workspace = true }
uuid = { version = "1", features = ["v4", "fast-rng"] }
glob = "0.3"
num_cpus = "1"
tokio-postgres-rustls = { workspace = true }
rustls = "0.23"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
rustls-pki-types = "1"

[features]

# see https://crates.io/crates/cargo-deb
[package.metadata.deb]
maintainer = "David Marteau <dmarteau@3liz.com>"
copyright = "2023, 3liz"
license-file = "../LICENSE-APACHE"
extended-description = """\
Proxy Postgres event as HTTP Server Send Event.
A server that subscribes to Postgres notification
and serve them to HTTP clients as Server Send Event 
(SSE). """ 
depends = "$auto"
section = "utility"
priority = "optional"
assets = [ 
    ["target/release/pg-event-server", "usr/local/bin/", "755"],
]

